docs: update login route docs
