# docs/swagger.json
@@ -64,7 +64,12 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "type": "object",
+                            "properties": {
+                                "isAdmin": {
+                                    "type": "boolean"
+                                }
+                            }
                         }
                     },
                     "400": {
